# EDA-schema

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  _parsers.py  dev_requirements.txt  extract_supported_proto_messages.sh  generate_proto.sh  pyproject.toml  requirements-dev.txt  requirements.txt  scratch.py  setup.py  tests.py
.github/workflows/: ci.yml
.license-headers/: README.md  proto.txt  python.txt  shell.txt  yaml.txt
docs/: README.md  cite.md  cite.rst  conf.py  datamodel.md  datamodel.rst  eda_schema.rst  getting_started.md  getting_started.rst  index.rst  open_dataset.md  open_dataset.rst
eda_schema/: __init__.py  _dataloader.py  base.py  dataset.py  db.py  eda_schema_pb2.py  eda_schema_pb2_grpc.py  entity.py  errors.py  grpc_server.py  json_utils.py  netlist.py  protobuf_io.py
eda_schema/db/: __init__.py  base.py  file.py  mongo.py  parquet.py  sqlite_pkl.py
eda_schema/proto/: __init__.py  eda_schema_pb2.py  eda_schema_pb2_grpc.py
eda_schema/serialization/: __init__.py  json_utils.py  protobuf_io.py
eda_schema/services/: __init__.py  grpc_server.py
examples/: README.md
notebooks/: Demo.ipynb  Getting Started with EDA-Schema.ipynb  IWLS05-OpenROAD-sky130hd-dataset-v1.1-Analysis.ipynb
protos/: eda_schema.proto
scripts/: convert_dataset_to_protobuf.py  processed_data_calculations.py  validate_dataset.py
tests/: README.md  conftest.py  test_edaschema_to_protobuf.py  test_grpc_server.py  test_netlist_diff.py  test_protobuf_io.py  test_pygraphviz.py  test_sample_dataset.py  test_schema_validators.py
(+180 files in other folders)
